--- a/frontend/src/styles/styles.css
+++ b/frontend/src/styles/styles.css
@@ -1,5 +1,5 @@
 /* LoginForm.css */
-.login-form {
+.form {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -7,7 +7,7 @@
   min-height: 100vh;
 }
 
-.login-form input,
-.login-form button {
+.form input,
+.form button {
   margin: 0.5rem 0;
 }
