--- a/frontend/src/styles/styles.css
+++ b/frontend/src/styles/styles.css
@@ -1,13 +1,35 @@
-/* LoginForm.css */
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
+
+body {
+	background-color: rgb(50, 52, 55);
+	color: rgb(209, 208, 197);
+	font-family: 'Roboto Mono', monospace;
+}
+
 .form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  min-height: 100vh;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	min-height: calc(100vh - 100px);
 }
 
 .form input,
 .form button {
-  margin: 0.5rem 0;
+	margin: 0.5rem 0;
+}
+
+.menu{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: calc(100vh - 100px);
+}
+
+.menu-item {
+  margin: 1rem;
+  cursor: pointer;
+  font-weight: bold;
+  font-size: 2rem;
 }
