--- a/frontend/src/styles/typing.css
+++ b/frontend/src/styles/typing.css
@@ -14,9 +14,13 @@
 }
 
 .spans {
-    display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-    width:70%
+    margin: auto auto;
+    width:70%;
+    height:70%
+}
+
+.message {
+    margin: auto auto;
+    width: 70%;
+    font-size: 1.2rem;
 }
